--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 h1{
     color: rgb(223, 28, 28);
 }
+h2{
+    color: blue;
+}
+h3{
+    color: blueviolet;
+}
+
+
 div{
     position: relative;
     color: red;
